# kanuni-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  docker-compose.yml  install.sh
.github/: changelog-config.json
.github/workflows/: docker.yml  release.yml  test.yml
kanuni-npm/: .gitignore  README.md  install.js  package.json  run.js  uninstall.js
src/: api.rs  cli.rs  config.rs  main.rs
src/api/: analysis.rs  documents.rs  progress.rs  websocket.rs
src/auth/: api_key.rs  client.rs  device_flow.rs  mod.rs  models.rs  sessions.rs  storage.rs  token_store.rs
src/commands/: analyze.rs  auth.rs  batch.rs  chat.rs  completions.rs  config.rs  document.rs  extract.rs  mod.rs  search.rs
src/utils/: banner.rs  mod.rs  progress.rs
