[package]
name = "kanuni"
version = "0.1.0"
edition = "2021"
authors = ["V-Lawyer Team <opensource@v-lawyer.ai>"]
description = "AI-powered legal intelligence CLI - The Ottoman Edition"
homepage = "https://github.com/v-lawyer/kanuni-cli"
repository = "https://github.com/v-lawyer/kanuni-cli"
license = "MIT OR Apache-2.0"
keywords = ["legal", "ai", "cli", "law", "assistant"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"

[[bin]]
name = "kanuni"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo", "env", "wrap_help"] }
clap_complete = "4.5"

# Async runtime
tokio = { workspace = true }

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "multipart"], default-features = false }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Terminal UI
colored = "2.1"
indicatif = "0.17"
dialoguer = "0.11"
console = "0.15"
termion = "4.0"

# Configuration
config = { version = "0.14", features = ["toml"] }
directories = "5.0"
toml = "0.8"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utils
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2"
uuid = { version = "1.8", features = ["v4", "serde"] }
base64 = "0.22"
url = "2.5"
comfy-table = "7.1"

# Security
rpassword = "7.3"
sha2 = "0.10"

# System utils
open = "5.0"

[dev-dependencies]
mockito = "1.4"
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
opt-level = 3          # Maximum optimization
lto = true            # Enable Link Time Optimization
codegen-units = 1     # Single codegen unit for better optimization
strip = true          # Strip symbols from binary
panic = "abort"       # Smaller binary size
